--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -87,9 +87,9 @@ services:
       BOOTSTRAP_SERVERS: broker:29092
       CONNECT_REST_ADVERTISED_HOST_NAME: debezium
       GROUP_ID: 1
-      CONFIG_STORAGE_TOPIC: connect_configs
-      STATUS_STORAGE_TOPIC: connect_statuses
-      OFFSET_STORAGE_TOPIC: connect_offsets
+      CONFIG_STORAGE_TOPIC: connect-configs
+      STATUS_STORAGE_TOPIC: connect-statuses
+      OFFSET_STORAGE_TOPIC: connect-offsets
       KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       ENABLE_DEBEZIUM_SCRIPTING: 'true'
@@ -113,9 +113,9 @@ services:
     ports:
       - '8080:8080'
     environment:
-      KAFKA_CONNECT_URIS: http://debezium:8083
+      KAFKA_CONNECT_URIS: "http://debezium:8083"
     networks:
-      cdc-network:
+      - cdc-network
 
   postgres:
     image: postgres:latest
@@ -135,6 +135,48 @@ services:
       retries: 5
     networks:
       cdc-network:
+  kafka-connect:
+    image: confluentinc/cp-kafka-connect:latest
+    container_name: kafka-connect
+    depends_on:
+      - broker
+      - postgres
+      - control-center
+      - debezium
+    ports:
+      - "8083:8083"
+    environment:
+      CONNECT_BOOTSTRAP_SERVERS: "broker:29092"
+      CONNECT_REST_PORT: 8083
+      CONNECT_GROUP_ID: "kafka-connect-group"
+      CONNECT_CONFIG_STORAGE_TOPIC: "connect-configs"
+      CONNECT_OFFSET_STORAGE_TOPIC: "connect-offsets"
+      CONNECT_STATUS_STORAGE_TOPIC: "connect-statuses"
+      CONNECT_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
+      CONNECT_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
+      CONNECT_INTERNAL_KEY_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
+      CONNECT_INTERNAL_VALUE_CONVERTER: "org.apache.kafka.connect.json.JsonConverter"
+      CONNECT_PLUGIN_PATH: "/kafka/plugins"
+      CONNECT_REST_ADVERTISED_HOST_NAME: "localhost"
+
+      # - CONNECT_BOOTSTRAP_SERVERS=broker:29092
+      # - CONNECT_REST_PORT=8083
+      # - CONNECT_GROUP_ID=kafka-connect-group
+      # - CONNECT_CONFIG_STORAGE_TOPIC=_connect-configs
+      # - CONNECT_OFFSET_STORAGE_TOPIC=_connect-offsets
+      # - CONNECT_STATUS_STORAGE_TOPIC=_connect-status
+      # - CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR=1
+      # - CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR=1
+      # - CONNECT_STATUS_STORAGE_REPLICATION_FACTOR=1
+      # - CONNECT_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+      # - CONNECT_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+      # - CONNECT_INTERNAL_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+      # - CONNECT_INTERNAL_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter
+      # - CONNECT_REST_ADVERTISED_HOST_NAME=localhost
+    volumes:
+      - ./plugins:/kafka/plugins
+    networks:
+      - cdc-network
 
 networks:
   cdc-network:
